--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -118,8 +118,8 @@
   <div class="container">
     <div class="footer-copyright mx-auto pb-10 pt-7 text-center">
       <p>
-        Designed And Developed by
-        <a href="https://themefisher.com" target="_blank">Themefisher</a>
+         Developed by
+        <a href="https://bluetech-tg.github.io/" target="_blank">BLUETECH</a>
       </p>
     </div>
   </div>
