--- a/docs/styles/buttons.css
+++ b/docs/styles/buttons.css
@@ -1,8 +1,6 @@
 /**
- * WEBSITE: https://themefisher.com
- * TWITTER: https://twitter.com/themefisher
- * FACEBOOK: https://facebook.com/themefisher
- * GITHUB: https://github.com/themefisher/
+ * WEBSITE: https://bluetech-tg.github.io/
+ * GITHUB: https://github.com/Bluetech-TG
  */
 
 .btn {
